--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -40,3 +40,15 @@
 li {
   list-style: none;
 }
+
+.size-block-inner{
+  background-color: white;
+  height: 70px;
+}
+
+.date-picker-style{
+  border-radius: 0.25rem;
+  border-radius: 10px;
+  height: 31px;
+  width: 100% !important;
+}
