네비게이션 바를 죄측 메뉴컬럼으로 변경

--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -91,3 +91,13 @@ hr {
   padding-right: .5rem !important;
   background-image: none !important;
 }
+
+.toggle-button-style {
+  position: fixed;
+  top: 0;
+  z-index: 1010;
+  margin: 10px;
+}
+.toggle-button-style:hover {
+  cursor: pointer;
+}
