--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -92,24 +92,7 @@ hr {
   background-image: none !important;
 }
 
-.toggle-button-style {
-  position: fixed;
-  top: 0;
-  z-index: 1010;
-  margin: 10px;
-}
-.toggle-button-style:hover {
-  cursor: pointer;
-}
-.regi-menu {
-  display: flex;
-  padding-left: 25px;
-  align-items: center;
-}
-.regi-menu:hover {
-  background-color: tomato;
-  cursor: pointer;
-}
+
 .title-menu {
   margin-top: 70px;
   height: 100px;
@@ -118,3 +101,47 @@ hr {
   text-align: center;
   text-decoration: none;
 }
+.app-container {
+  display: flex;
+}
+.sidebard {
+  width: 250px;
+  height: 100%;
+  border-right: 1px solid #ccc;
+  background-color: #217b94;
+}
+.sidebar {
+  width: 250px;
+  height: 100%;
+  border-right: 1px solid #ccc;
+  background-color: #6672756b;
+  position: fixed; /* Navbar를 화면에 고정 */
+}
+
+.main-content {
+  flex: 1; /* 나머지 영역을 채우기 위해 flex를 사용 */
+  margin-left: 250px; /* Navbar의 너비만큼 왼쪽 여백 추가 */
+  padding: 20px; /* 추가적인 패딩을 주어 겹치지 않게 함 */
+  overflow-y: auto; /* 스크롤이 필요할 때만 스크롤이 가능하도록 설정 */
+}
+.sidebar .title-menu {
+  font-size: 25px;
+  height: 70px;
+}
+
+.sidebar .regi-menu {
+  font-size: 16px;
+  padding: 10px 20px;
+}
+
+.sidebar .regi-menu a {
+  display: block;
+  color: black;
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+
+.sidebar .regi-menu a:hover {
+  color: blue;
+}
+
