--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -216,5 +217,10 @@ hr {
 }
 .profile:hover{
   background-color: #F7F7F7;
+  cursor: pointer;
+}
+
+.regi-card:hover {
+  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
