--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -102,6 +102,7 @@ hr {
   height: 100%;
   border-right: 1px solid #cccccc8c;
   position: fixed; /* Navbar를 화면에 고정 */
+  /* background-color: #DD3A49; */
 }
 .navBar-rest {
   height: 50px;
@@ -223,4 +224,27 @@ hr {
 .regi-card:hover {
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+.inner-nav {
+  width: 100%;
+  height: 100px;
+  align-content: center;
+  border-bottom: 1px solid #cccccc8c;
+  padding-left: 20px;
+}
+.inner-nav-link {
+  color: gray;
+  margin: 7px;
+  font-weight: bold;
+}
+.inner-nav-link-click:hover {
+  color: black;
+  cursor: pointer;
+}
+.sidebar-title{
+  height: 100px;
+  align-content: center;
+  text-align: center;
+  border-bottom: 1px solid #cccccc8c;
 }
