URI 이동 안정화, 최근 업데이트 기록 연동, UI 변경

--- a/03-react/front-end/src/index.css
+++ b/03-react/front-end/src/index.css
@@ -5,7 +5,7 @@ body {
     'Arial, sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: #f0f4f8 !important; */
+  /* background-color: #F8F8F8 !important; */
 }
 
 code {
