--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -95,19 +95,25 @@ hr {
 }
 .side-rest-wide {
   width: 200px;
-  height: 100%;
+  min-width: 200px;
 }
 .sidebar-wide {
   width: 200px;
+  min-width: 200px;
   height: 100%;
   border-right: 1px solid #cccccc8c;
-  position: fixed; /* Navbar를 화면에 고정 */
-  /* background-color: #DD3A49; */
+}
+.overview-line {
+  display: flex;
 }
 .navBar-rest {
   height: 50px;
   width: 100%;
+  min-width: 800px;
   border-bottom: 1px solid #cccccc8c;
+  z-index: 1000; 
+  position: fixed;
+  /* background-color: tomato; */
 }
 .navBar-rest-narrow {
   width: 80px;
@@ -119,7 +125,7 @@ hr {
   width: 80px;
   height: 100%;
   border-right: 1px solid #cccccc8c;
-  position: fixed; /* Navbar를 화면에 고정 */
+  /* position: fixed; */
 }
 .main-content {
   flex: 1; /* 나머지 영역을 채우기 위해 flex를 사용 */
@@ -229,9 +235,8 @@ hr {
 
 .inner-nav {
   width: 100%;
-  height: 100px;
+  height: 50px;
   align-content: center;
-  border-bottom: 1px solid #cccccc8c;
   padding-left: 20px;
 }
 .inner-nav-link {
@@ -248,4 +253,26 @@ hr {
   align-content: center;
   text-align: center;
   border-bottom: 1px solid #cccccc8c;
+}
+
+.container-navTop {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between
+}
+
+.clickable-item {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.clickable-item:hover {
+  color: blue;
+}
+.nav-bar-top {
+  min-width: 700px;
+  height: 50px;
+  background-color: white;
+  border-bottom: 1px solid #cccccc8c;
+  display: flex;
+  justify-content: space-between;
 }
