--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -106,35 +106,11 @@ hr {
 .overview-line {
   display: flex;
 }
-.navBar-rest {
-  height: 50px;
-  width: 100%;
-  min-width: 800px;
-  border-bottom: 1px solid #cccccc8c;
-  z-index: 1000; 
-  position: fixed;
-  /* background-color: tomato; */
-}
-.navBar-rest-narrow {
-  width: 80px;
-  min-width: 80px;
-  height: 100%;
-  border-right: 1px solid #cccccc8c;
-}
-.sidebar-narrow {
-  width: 80px;
-  height: 100%;
-  border-right: 1px solid #cccccc8c;
-  /* position: fixed; */
-}
+
 .main-content {
   flex: 1; /* 나머지 영역을 채우기 위해 flex를 사용 */
   margin-left: 250px; /* Navbar의 너비만큼 왼쪽 여백 추가 */
   padding: 20px;
-}
-.sidebar .title-menu {
-  font-size: 25px;
-  height: 70px;
 }
 .regi-menu {
   height: 38px;
@@ -149,16 +125,6 @@ hr {
 .regi-menu:hover{
   background-color: #F7F7F7;
   cursor: pointer;
-}
-
-.sidebar .regi-menu a {
-  display: block;
-  color: black;
-  text-decoration: none;
-}
-
-.sidebar .regi-menu a:hover {
-  color: blue;
 }
 
 .button-container {
@@ -215,19 +181,6 @@ hr {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.profile{
-  display: flex;
-  height: 100%;
-  border-left: 1px solid #cccccc8c;
-  justify-content: center;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.profile:hover{
-  background-color: #F7F7F7;
-  cursor: pointer;
-}
-
 
 .inner-nav {
   width: 100%;
@@ -240,7 +193,7 @@ hr {
   margin: 7px;
   font-weight: bold;
 }
-.inner-nav-link-click:hover {
+.inner-nav-link:hover {
   color: black;
   cursor: pointer;
 }
@@ -265,12 +218,18 @@ hr {
   color: blue;
 }
 .nav-bar-top {
-  min-width: 700px;
-  height: 50px;
+  min-width: 1300px;
   background-color: white;
   border-bottom: 1px solid #cccccc8c;
   display: flex;
+  height: 60px;
+  justify-content: center;
+}
+.nav-inner {
+  display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: 1440px;
 }
 .regi-card-dots:hover {
   cursor: pointer;
