--- a/03-react/front-end/src/App.css
+++ b/03-react/front-end/src/App.css
@@ -14,6 +14,13 @@
   }
 }
 
+@font-face {
+  font-family: 'PretendardLight';
+  src: url('../public/fonts/PretendardLight.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
