--- a/2026-v0.2/registry-v02/app/templates/index.html
+++ b/2026-v0.2/registry-v02/app/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="wrap">
-    <h1>FastAPI + Jinja 템플릿</h1>
+    <h1>FastAPI + Jinja 템플릿 xptmxm</h1>
     <p class="msg">{{ message }}</p>
 
     <section class="card">
