--- a/2026-v0.2/registry-v02/app/templates/dd_detail.html
+++ b/2026-v0.2/registry-v02/app/templates/dd_detail.html
@@ -553,11 +553,11 @@
         <!-- Header -->
         <header class="page-header">
             <nav class="breadcrumb">
-                <a href="#">Home</a>
+                <a href="/">Home</a>
                 <span>/</span>
-                <a href="#">GI Registers</a>
+                <a href="/">GI Registers</a>
                 <span>/</span>
-                <a href="data-registry.html">Data Dictionary Register</a>
+                <a href="/ui/registers">Data Dictionary Register</a>
                 <span>/</span>
                 <span class="current">Item #{{ item.itemIdentifier }}</span>
             </nav>
