--- a/2026-v0.2/registry-v02/app/templates/dd_detail.html
+++ b/2026-v0.2/registry-v02/app/templates/dd_detail.html
@@ -555,7 +555,7 @@
             <nav class="breadcrumb">
                 <a href="/">Home</a>
                 <span>/</span>
-                <a href="/">GI Registers</a>
+                <a href="/">GI Registers ehlsru?</a>
                 <span>/</span>
                 <a href="/ui/registers">Data Dictionary Register</a>
                 <span>/</span>
