브레드크럼 상대경로 추가

--- a/2026-v0.2/registry-v02/app/templates/dd_detail.html
+++ b/2026-v0.2/registry-v02/app/templates/dd_detail.html
@@ -555,9 +555,9 @@
             <nav class="breadcrumb">
                 <a href="/">Home</a>
                 <span>/</span>
-                <a href="/">GI Registers ehlsru?</a>
+                <a href="/ui/registers">GI Registers</a>
                 <span>/</span>
-                <a href="/ui/registers">Data Dictionary Register</a>
+                <a href="/ui/dd">Data Dictionary Register</a>
                 <span>/</span>
                 <span class="current">Item #{{ item.itemIdentifier }}</span>
             </nav>
