--- a/2026-v0.2/registry-v02/app/templates/dd_list.html
+++ b/2026-v0.2/registry-v02/app/templates/dd_list.html
@@ -555,9 +555,9 @@
         <!-- Header -->
         <header class="page-header">
             <nav class="breadcrumb">
-                <a href="#">Home</a>
+                <a href="/">Home</a>
                 <span>/</span>
-                <a href="#">GI Registers</a>
+                <a href="/ui/registers">GI Registers</a>
                 <span>/</span>
                 <span class="current">Data Dictionary Register</span>
             </nav>
